Integrate stripe and payments for job listings

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,7 @@
 VITE_API_URL=http://localhost:3000
+
+# Use your actual development key for testing
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_placeholder
+
 # Use this to test slow API calls
 # VITE_TEST_SLOW_API=true
